--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <!-- Title -->
-    <h2>ONSEN MAKER</h2>
+    <h2>ICE SHAKER</h2>
     <hr />
     
     <div id="controls" class="hidden">
@@ -30,7 +30,7 @@
           <td class="device-info-cell device-info-val" id="click-count">0</td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Temperature</th>
+          <th class="device-info-cell device-info-key">Temperatre</th>
           <td class="device-info-cell device-info-val" id="temperature">-</td>
         </tr>
         <tr>
