--- a/index.html
+++ b/index.html
@@ -38,21 +38,25 @@
           <td class="device-info-cell device-info-val" id="timeout">-</td>
         </tr>
         <tr>
+          <th class="device-info-cell device-info-key">Mode</th>
+          <td class="device-info-cell device-info-val" id="mode">-</td>
+        </tr>
+        <tr>
           <th class="device-info-cell device-info-key"></th>
           <td class="device-info-cell device-info-val">
             <button id="btn-state" class="btn btn-state" disabled>OFF</button>
           </td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Temp. OFF(C)</th>
+          <th class="device-info-cell device-info-key">Rotation</th>
           <td class="device-info-cell device-info-val"><input type="text" value="69" id="thigh"></td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Temp. ON(C)</th>
+          <th class="device-info-cell device-info-key">Stop</th>
           <td class="device-info-cell device-info-val"><input type="text" value="68" id="tlow"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Time(s)</th>
+          <th class="device-info-cell device-info-key">Run Time</th>
           <td class="device-info-cell device-info-val"><input type="text" value="1200" id="stime"></td>
         </tr>
 
