--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <td class="device-info-cell device-info-val" id="click-count">0</td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Temperatre</th>
+          <th class="device-info-cell device-info-key">Temperature</th>
           <td class="device-info-cell device-info-val" id="temperature">-</td>
         </tr>
         <tr>
@@ -48,15 +48,15 @@
           </td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Rotation</th>
+          <th class="device-info-cell device-info-key">Rotate(s)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="69" id="thigh"></td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Stop</th>
+          <th class="device-info-cell device-info-key">Stop(s)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="68" id="tlow"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Run Time</th>
+          <th class="device-info-cell device-info-key">Run(s)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="1200" id="stime"></td>
         </tr>
 
