--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
           </td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Rotate(s)</th>
+          <th class="device-info-cell device-info-key">Rotate (ms)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="69" id="thigh"></td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Stop(s)</th>
+          <th class="device-info-cell device-info-key">Stop (ms)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="68" id="tlow"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Run(s)</th>
+          <th class="device-info-cell device-info-key">Run (m)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="1200" id="stime"></td>
         </tr>
 
