--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
           </td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Rotate (ms)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="500" id="thigh"></td>
+          <th class="device-info-cell device-info-key">เวลาหมุน(ms)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="500" id="rtime"></td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Stop (ms)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="1000" id="tlow"></td>
+          <th class="device-info-cell device-info-key">เวลาหยุด(ms)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="1000" id="stime"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Run (m)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="20" id="stime"></td>
+          <th class="device-info-cell device-info-key">เวลาทำงาน(m)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="20" id="utime"></td>
         </tr>
 
 
