--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         </tr>
          <tr>
           <th class="device-info-cell device-info-key">เวลาหมุน(ms)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="500" id="rtime"></td>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="rtime"></td>
         </tr>
          <tr>
           <th class="device-info-cell device-info-key">เวลาหยุด(ms)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="1000" id="stime"></td>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="stime"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">เวลาทำงาน(m)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="20" id="utime"></td>
+          <th class="device-info-cell device-info-key">ทำงาน(m)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="utime"></td>
         </tr>
 
 
