--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
           </td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">เวลาหมุน(ms)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="" id="rtime"></td>
+          <th class="device-info-cell device-info-key">Start (ms)</th>
+          <td class="device-info-cell device-info-val">:<input type="text" value="" id="rtime"></td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">เวลาหยุด(ms)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="" id="stime"></td>
+          <th class="device-info-cell device-info-key">Stop (ms)</th>
+          <td class="device-info-cell device-info-val">:<input type="text" value="" id="stime"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">ทำงาน(m)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="" id="utime"></td>
+          <th class="device-info-cell device-info-key">Shake (n)</th>
+          <td class="device-info-cell device-info-val">:<input type="text" value="" id="utime"></td>
         </tr>
 
 
