--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         </tr>
          <tr>
           <th class="device-info-cell device-info-key">Start (ms)</th>
-          <td class="device-info-cell device-info-val">:<input type="text" value="" id="rtime"></td>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="rtime"></td>
         </tr>
          <tr>
           <th class="device-info-cell device-info-key">Stop (ms)</th>
-          <td class="device-info-cell device-info-val">:<input type="text" value="" id="stime"></td>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="stime"></td>
         </tr>
         <tr>
           <th class="device-info-cell device-info-key">Shake (n)</th>
-          <td class="device-info-cell device-info-val">:<input type="text" value="" id="utime"></td>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="utime"></td>
         </tr>
 
 
