--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           <td class="device-info-cell device-info-val" id="temperature">-</td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Timeout</th>
+          <th class="device-info-cell device-info-key">Countdown</th>
           <td class="device-info-cell device-info-val" id="timeout">-</td>
         </tr>
         <tr>
           <th class="device-info-cell device-info-key">Mode</th>
           <td class="device-info-cell device-info-val" id="mode">-</td>
         </tr>
-        <tr>
+        <tr class="hidden">
           <th class="device-info-cell device-info-key"></th>
           <td class="device-info-cell device-info-val">
             <button id="btn-state" class="btn btn-state" disabled>OFF</button>
