--- a/index.html
+++ b/index.html
@@ -47,17 +47,25 @@
             <button id="btn-state" class="btn btn-state" disabled>OFF</button>
           </td>
         </tr>
-         <tr>
-          <th class="device-info-cell device-info-key">Start (ms)</th>
+        <tr>
+          <th class="device-info-cell device-info-key">Set Point(C)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="stemp"></td>
+        </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">Left(ms)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="ltime"></td>
+        </tr>
+        <tr>
+          <th class="device-info-cell device-info-key">Right(ms)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="" id="rtime"></td>
         </tr>
          <tr>
-          <th class="device-info-cell device-info-key">Stop (ms)</th>
+          <th class="device-info-cell device-info-key">Stop(ms)</th>
           <td class="device-info-cell device-info-val"><input type="text" value="" id="stime"></td>
         </tr>
         <tr>
-          <th class="device-info-cell device-info-key">Shake (n)</th>
-          <td class="device-info-cell device-info-val"><input type="text" value="" id="utime"></td>
+          <th class="device-info-cell device-info-key">Shake(n)</th>
+          <td class="device-info-cell device-info-val"><input type="text" value="" id="nshake"></td>
         </tr>
 
 
